# kriti

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  Makefile  README.md  TODO  kriti.config  kriti.xml  make_dist_version.sh  make_headers_version.sh  merge.mri  newclass.pl  newfwd.pl  upload_dist
src/: AssimpWrapper.cpp  AssimpWrapper.h  CMakeLists.txt  FileResource.cpp  FileResource.h  MessageSystem.cpp  MessageSystem.h  ModelViewerContext.cpp  ModelViewerContext.h  Resource.h  ResourceRegistry.cpp  ResourceRegistry.h  TimeCoordinator.cpp  TimeCoordinator.h  TimeValue.cpp  TimeValue.h  XMLResource.cpp  XMLResource.h  main.cpp
src/assimp/: 3DSHelper.h  3DSLoader.h  ACLoader.h  ASELoader.h  ASEParser.h  Assimp.cpp  AssimpPCH.cpp  AssimpPCH.h  B3DImporter.h  BaseImporter.h  BlenderLoader.cpp  CInterfaceIOWrapper.h  ColladaExporter.h  ColladaLoader.cpp  ComputeUVMappingProcess.h  ConvertToLHProcess.h  DeboneProcess.h  FBXParser.cpp  FindDegenerates.h  FindInvalidDataProcess.h  GenFaceNormalsProcess.h  GenVertexNormalsProcess.h  GenericProperty.h  HMPFileData.h  HMPLoader.h  HalfLifeFileData.h  Importer.cpp  ImporterRegistry.cpp  ImproveCacheLocality.h  JoinVerticesProcess.h  LICENSE  LWOFileData.h  LWOLoader.h  MD2FileData.h  MD2Loader.h  MD3FileData.h  MD3Loader.h  MD5Loader.h  MD5Parser.h  MDCFileData.h  (+39 more)
src/config/: Parser.cpp  Parser.h  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h
src/context/: ContextLoop.cpp  ContextLoop.h  ContextManager.cpp
src/event/: EventQueue.cpp  EventQueue.h  EventRouter.h
src/game/: MainMenuContext.cpp  MainMenuContext.h  Object.cpp  Object.h  Track.cpp  Track.h  TrackNode.cpp  TrackNode.h  Vehicle.cpp  Vehicle.h  VehicleModel.cpp  VehicleModel.h  VehicleSuspension.cpp  VehicleSuspension.h
src/gui/: Button.cpp  Button.h  Font.cpp  Font.h  ItemScaler.cpp  ItemScaler.h  Label.cpp  Label.h  Layout.cpp  Layout.h  LayoutItem.h  Loader.cpp  Loader.h  MouseCursor.cpp  MouseCursor.h  MouseInteractor.cpp  MouseInteractor.h  MouseState.h  OutlineRegistry.cpp  OutlineRegistry.h  PackedLayout.cpp  PackedLayout.h  Panel.cpp  Panel.h  RenderableRegistry.cpp  RenderableRegistry.h  Scale.cpp  Scale.h  TextRenderer.cpp  TextRenderer.h  Widget.cpp  Widget.h
src/interface/: DeviceManager.cpp  DeviceManager.h  InputDevice.h  Keyboard.cpp  Keyboard.h  KeyboardRouter.h  KeyboardSignals.h  Mouse.cpp  Mouse.h  MouseRouter.h  Video.cpp  Video.h
src/kriti/: AssimpWrapper.cpp  AssimpWrapper.h  FileResource.cpp  FileResource.fwd  FileResource.h  Globals.cpp  Globals.h  MessageSystem.cpp  MessageSystem.h  ModelViewerContext.h  Resource.cpp  ResourceRegistry.cpp  ResourceRegistry.h  Singleton.cpp  Singleton.fwd  Singleton.h  StreamAsString.h  TimeValue.h  TupleUtil.cpp  TupleUtil.h  XMLResource.fwd  XMLResource.h  main.cpp  ogl.cpp  ogl.h
src/kriti/box2d/: World.cpp  World.fwd  World.h
src/kriti/bullet/: Constraint.cpp  Constraint.h  ObjectFactory.cpp  ObjectFactory.h  ObjectFeedback.cpp  ObjectFeedback.h  ObjectForceModifier.cpp  ObjectForceModifier.h  ObjectModifier.cpp  ObjectModifier.h  ObjectMotionState.cpp  ObjectMotionState.h  PhysicalObject.cpp  PhysicalObject.h  Util.cpp  Util.h  World.cpp  World.h  WorldRegistry.cpp  WorldRegistry.h
src/kriti/context/: AbstractContext.cpp  AbstractContext.h  ContextManager.cpp  ContextManager.h
src/kriti/data/: Bound.cpp  Bound.h  ConcreteRTree.cpp  ConcreteRTree.h  Point.h  RTree.cpp  RTree.h  RTreePrivate.cpp  RTreePrivate.h
src/kriti/event/: EventRouter.cpp  EventRouter.h
src/kriti/game/: Object.cpp  Object.h
src/kriti/gui/: Button.cpp  Button.h  Context.cpp  Context.fwd  Context.h  Font.cpp  Font.h  ItemScaler.cpp  ItemScaler.h  KeyboardFocus.cpp  KeyboardFocus.fwd  KeyboardFocus.h  KeyboardFocusTarget.cpp  KeyboardFocusTarget.fwd  KeyboardFocusTarget.h  Label.cpp  Label.h  Layout.cpp  Layout.h  LayoutItem.cpp  LayoutItem.h  LayoutSpacer.cpp  LayoutSpacer.fwd  LayoutSpacer.h  LineEdit.cpp  LineEdit.fwd  LineEdit.h  Loader.cpp  Loader.h  MouseCursor.cpp  MouseCursor.h  MouseInteractor.cpp  MouseInteractor.h  MouseState.cpp  MouseState.h  OutlineRegistry.cpp  OutlineRegistry.h  PackedLayout.cpp  (+20 more)
src/math/: AffineTransformation.cpp  AffineTransformation.h  Geometry.cpp  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h  ViewGenerator.cpp  ViewGenerator.h
src/physics/: BulletWrapper.cpp  BulletWrapper.h  Constraint.cpp  Constraint.h  DebugRenderableUpdater.cpp  DebugRenderableUpdater.h  ObjectFactory.cpp  ObjectFactory.h  ObjectFeedback.cpp  ObjectFeedback.h  ObjectForceModifier.cpp  ObjectForceModifier.h  ObjectManipulator.cpp  ObjectManipulator.h  ObjectModifier.cpp  ObjectModifier.h  ObjectMotionState.cpp  PhysicalObject.cpp  PhysicalObject.h  Util.cpp  Util.h  World.cpp  World.h  WorldRegistry.cpp
src/profile/: Timer.cpp  Tracker.cpp  Tracker.h
src/render/: Framebuffer.cpp  Framebuffer.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelSequence.h  Pipeline.cpp  Pipeline.h  Program.cpp  Program.h  RenderSequence.cpp  RenderSequence.h  Renderable.cpp  Renderable.h  RenderableContainer.cpp  RenderableContainer.h  RenderableFactory.cpp  RenderableFactory.h  Renderbuffer.cpp  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  Shader.cpp  Shader.h  Stage.cpp  Stage.h  Technique.cpp  Technique.h  TechniqueParams.cpp  TechniqueParams.h  Texture.cpp  Texture.h  TextureContext.cpp  TextureContext.h  (+9 more)
src/scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  LightRegistry.cpp  LightRegistry.h  Model.cpp  Model.h
src/track/: ClosedSubdivider.cpp  ClosedSubdivider.h  CylindricExtruder.cpp  CylindricExtruder.h  Extruder.cpp  Extruder.h  ExtrusionResult.cpp  ExtrusionResult.h  GeneratedTrack.cpp  GeneratedTrack.h  Generator.cpp  Generator.h  Node.cpp  Node.h  Partitioner.cpp  Partitioner.h  PlanarExtruder.cpp  PlanarExtruder.h  RandomGenerator.cpp  RandomGenerator.h  Subdivider.cpp  Subdivider.h
(+178 files in other folders)
